[package]
name = "kukan"
version = "0.1.2"
edition = "2021"
description = "kukan is a simple and powerful tool for mathematical interval"
authors = [ "Yoshiera <yoshierahuang@126.com>" ]
readme = "README.md"
license = "MIT"
repository = "https://github.com/YoshieraHuang/kukan"
keywords = ["kukan", "interval"]
categories = ["mathematics"]
documentation = "https://docs.rs/kukan/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
